--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET=supersecret
-DATABASE1=mongodb+srv://admin:admin@cluster0.02zbr.mongodb.net/
+DATABASE1=mongodb+srv://admin:admin@backendseminario1.k3wui.mongodb.net/
 DATABASE2=Bench?retryWrites
 DATABASE3=true&w
 DATABASE4=majority
